[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glimy"
version = "4.0.0"
authors = [
  { name="Ali Hakim Taskiran", email="alihakimxyz@gmail.com" },
]
description = "Computational Electromagnetics Package with Dielectic, Magnetic Materials and Gravity"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alihakimtaskiran/Glimy"
"Bug Tracker" = "https://github.com/alihakimtaskiran/Glimy/issues"
